[package]
name = "minosse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["fs-walker", "json"]

[dependencies]
fs-walker = { path = "./fs-walker" }
json = { path = "./json" }
structopt = { version = "0.3", default-features = false }
